[gd_scene load_steps=80 format=3 uid="uid://bcdatmr2ojspm"]

[ext_resource type="Texture2D" uid="uid://b0gamexguqoto" path="res://barkley2/assets/b2_original/images/merged/s_effect_explo_16.png" id="1_wojvb"]
[ext_resource type="Texture2D" uid="uid://bfris6yxjxwp1" path="res://barkley2/assets/b2_original/images/merged/s_effect_explo_24.png" id="2_s8ilr"]
[ext_resource type="Texture2D" uid="uid://bbv8rsnlblxkd" path="res://barkley2/assets/b2_original/images/merged/s_effect_explo_32.png" id="3_8vek6"]
[ext_resource type="Texture2D" uid="uid://dsiueknaqtagf" path="res://barkley2/assets/b2_original/images/merged/s_effect_explo_48.png" id="4_lq6p7"]
[ext_resource type="Texture2D" uid="uid://cncl1ivp8jpht" path="res://barkley2/assets/b2_original/images/merged/s_effect_explo_96.png" id="5_byf6i"]
[ext_resource type="Texture2D" uid="uid://bl0ou6de7l04a" path="res://barkley2/assets/b2_original/images/merged/s_effect_explo_rotten.png" id="6_extxi"]
[ext_resource type="Texture2D" uid="uid://bqdx3cpa36p0q" path="res://barkley2/assets/b2_original/images/merged/s_effect_explo_untamo.png" id="7_cs604"]
[ext_resource type="Script" uid="uid://dnnojarmfg3ws" path="res://barkley2/scenes/Objects/_effects/Misc/o_effect_explosion.gd" id="8_8qosm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bs4fv"]
atlas = ExtResource("1_wojvb")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ac8so"]
atlas = ExtResource("1_wojvb")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_uup3v"]
atlas = ExtResource("1_wojvb")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_c5wdb"]
atlas = ExtResource("1_wojvb")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_etd0g"]
atlas = ExtResource("1_wojvb")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_r2tan"]
atlas = ExtResource("1_wojvb")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jyiau"]
atlas = ExtResource("1_wojvb")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tsuwi"]
atlas = ExtResource("2_s8ilr")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_nighd"]
atlas = ExtResource("2_s8ilr")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_faigq"]
atlas = ExtResource("2_s8ilr")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6ve5"]
atlas = ExtResource("2_s8ilr")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_igb7l"]
atlas = ExtResource("2_s8ilr")
region = Rect2(96, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7f50"]
atlas = ExtResource("2_s8ilr")
region = Rect2(120, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuk0n"]
atlas = ExtResource("2_s8ilr")
region = Rect2(144, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ahw7"]
atlas = ExtResource("2_s8ilr")
region = Rect2(168, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_hssts"]
atlas = ExtResource("2_s8ilr")
region = Rect2(192, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_llo5k"]
atlas = ExtResource("3_8vek6")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r016n"]
atlas = ExtResource("3_8vek6")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x8f8j"]
atlas = ExtResource("3_8vek6")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwx88"]
atlas = ExtResource("3_8vek6")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2b2hw"]
atlas = ExtResource("3_8vek6")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hqwt"]
atlas = ExtResource("3_8vek6")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kufqd"]
atlas = ExtResource("3_8vek6")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ngr0o"]
atlas = ExtResource("3_8vek6")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m00u7"]
atlas = ExtResource("3_8vek6")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fv1y3"]
atlas = ExtResource("4_lq6p7")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tjesg"]
atlas = ExtResource("4_lq6p7")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rsrrr"]
atlas = ExtResource("4_lq6p7")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ok35t"]
atlas = ExtResource("4_lq6p7")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_womyd"]
atlas = ExtResource("4_lq6p7")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_un4tx"]
atlas = ExtResource("4_lq6p7")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4j4x"]
atlas = ExtResource("4_lq6p7")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_iqfsf"]
atlas = ExtResource("4_lq6p7")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_eyvey"]
atlas = ExtResource("4_lq6p7")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1561c"]
atlas = ExtResource("4_lq6p7")
region = Rect2(432, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sbmqj"]
atlas = ExtResource("4_lq6p7")
region = Rect2(480, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wdg5t"]
atlas = ExtResource("4_lq6p7")
region = Rect2(528, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_onlbx"]
atlas = ExtResource("5_byf6i")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_wb0f6"]
atlas = ExtResource("5_byf6i")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_l0883"]
atlas = ExtResource("5_byf6i")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_yjdgu"]
atlas = ExtResource("5_byf6i")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ii5bf"]
atlas = ExtResource("5_byf6i")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_j12kr"]
atlas = ExtResource("5_byf6i")
region = Rect2(480, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_i2y2v"]
atlas = ExtResource("5_byf6i")
region = Rect2(576, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_v07a0"]
atlas = ExtResource("5_byf6i")
region = Rect2(672, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_et1ll"]
atlas = ExtResource("5_byf6i")
region = Rect2(768, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_4m17p"]
atlas = ExtResource("5_byf6i")
region = Rect2(864, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_0q0rl"]
atlas = ExtResource("5_byf6i")
region = Rect2(960, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_vti3f"]
atlas = ExtResource("5_byf6i")
region = Rect2(1056, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_jyqpm"]
atlas = ExtResource("5_byf6i")
region = Rect2(1152, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_edjlc"]
atlas = ExtResource("5_byf6i")
region = Rect2(1248, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_4vvg3"]
atlas = ExtResource("5_byf6i")
region = Rect2(1344, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_500ol"]
atlas = ExtResource("6_extxi")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_51whu"]
atlas = ExtResource("6_extxi")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_empwi"]
atlas = ExtResource("6_extxi")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_47gpv"]
atlas = ExtResource("6_extxi")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ns5q"]
atlas = ExtResource("6_extxi")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g4gyp"]
atlas = ExtResource("6_extxi")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gsrvv"]
atlas = ExtResource("6_extxi")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2w6ut"]
atlas = ExtResource("6_extxi")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ygqck"]
atlas = ExtResource("6_extxi")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mywu4"]
atlas = ExtResource("7_cs604")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4j5g"]
atlas = ExtResource("7_cs604")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_no18b"]
atlas = ExtResource("7_cs604")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_63rar"]
atlas = ExtResource("7_cs604")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_324vu"]
atlas = ExtResource("7_cs604")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_heqgv"]
atlas = ExtResource("7_cs604")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_52baw"]
atlas = ExtResource("7_cs604")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b87i8"]
atlas = ExtResource("7_cs604")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hyc6g"]
atlas = ExtResource("7_cs604")
region = Rect2(512, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_0cif8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bs4fv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ac8so")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uup3v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c5wdb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_etd0g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r2tan")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jyiau")
}],
"loop": false,
"name": &"s_effect_explo_16",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tsuwi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nighd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_faigq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6ve5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_igb7l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7f50")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuk0n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ahw7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hssts")
}],
"loop": true,
"name": &"s_effect_explo_24",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_llo5k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r016n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8f8j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwx88")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2b2hw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hqwt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kufqd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ngr0o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m00u7")
}],
"loop": true,
"name": &"s_effect_explo_32",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fv1y3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjesg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rsrrr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ok35t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_womyd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_un4tx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4j4x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iqfsf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eyvey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1561c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbmqj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wdg5t")
}],
"loop": true,
"name": &"s_effect_explo_48",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_onlbx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wb0f6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l0883")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yjdgu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ii5bf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j12kr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i2y2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v07a0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_et1ll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4m17p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0q0rl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vti3f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jyqpm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_edjlc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4vvg3")
}],
"loop": true,
"name": &"s_effect_explo_96",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_500ol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_51whu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_empwi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_47gpv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ns5q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g4gyp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gsrvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2w6ut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ygqck")
}],
"loop": true,
"name": &"s_effect_explo_rotten",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mywu4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4j5g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_no18b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_63rar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_324vu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_heqgv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_52baw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b87i8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hyc6g")
}],
"loop": true,
"name": &"s_effect_explo_untamo",
"speed": 5.0
}]

[node name="o_effect_explosion" type="AnimatedSprite2D"]
self_modulate = Color(1, 1, 1, 0.65)
sprite_frames = SubResource("SpriteFrames_0cif8")
animation = &"s_effect_explo_untamo"
script = ExtResource("8_8qosm")

[node name="explosion_sfx" type="AudioStreamPlayer2D" parent="."]
max_distance = 1000.0
bus = &"Audio"

[connection signal="animation_finished" from="." to="." method="_on_animation_finished"]
[connection signal="finished" from="explosion_sfx" to="." method="_on_explosion_sfx_finished"]
